fixed spacing?

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -12,7 +12,7 @@
 header {
 	background-color: #fff2fc;
 	color: #989b96;
-	font-size: 28px;
+	font-size: 24px;
 	
 }
 
@@ -23,14 +23,14 @@ header {
 }
 
 h4 {
-	font-size: 30px;
+	font-size: 24px;
 }
 
 main {
 	font-family: 'Petit+Formal+Script', serif; 
 	color: #989b96;
-	font-size: 28px;
-	padding: 0px 150px 40px 80px;
+	font-size: 24px;
+	padding: 0px 80px 40px 80px;
 	font-weight: normal;
 	background: linear-gradient(to bottom, #fff2fc 0%, #ffffff 100%);
 
@@ -38,14 +38,14 @@ main {
 
 p {
 	font-family: 'Petit+Formal+Script', serif; 
-	padding: 5px 90px 5px 90px;
+	padding: 5px 20px 5px 20px;
 	text-align: center;
 	
 }
 
 ul {
 	text-align: left; 
-	padding-left: 145px;
+	padding-left: 80px;
 	padding-top: 20px;
 	line-height: 34px;
 
@@ -86,7 +86,7 @@ a {
 
 #lcquote {
 	text-align: center;
-	padding: 18px 225px;
+	padding: 18px 60px;
 	line-height: 45px;
 }
 
@@ -103,7 +103,7 @@ a {
 }
 
 .mepics {
-	padding-left: 0px;
+	
 }
 
 #coffee {
@@ -111,7 +111,7 @@ a {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-	padding-left: 365px;
+	padding-left: 310px;
 	padding-top: 120px;
 
 }
@@ -121,7 +121,7 @@ a {
 	position: absolute;
 	width: 500px;
 	height: 375px;
-	padding-left: 572px;
+	padding-left: 525px;
 	padding-top: 20px;
 
 }
@@ -129,10 +129,10 @@ a {
 
 #penny {
 
-	position: absolute;
 	width: 250px;
 	height: 333px;
-	padding-left: 1080px;
+	float: right;
+	padding-right: 140px;
 	padding-top: 45px;
 
 }
